--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ gradio = "^5.6.0"
 pandas = "^2.0.0"
 openpyxl = "^3.1.0"
 unidecode = "^1.3.6"
-fuzzywuzzy = "^0.18.0"
-python-levenshtein = "^0.25.0"
+scikit-learn = "^1.3.0"
+nltk = "^3.8.1"
 
 [build-system]
 requires = ["poetry-core"]
