Enhance duplicate detection algorithm with committee-based approach
- Updated app.py to reflect the new committee-based duplicate detection method, detailing the roles of four judges and their voting criteria.
- Refined duplicate detection logic in duplicate_detector.py to implement the committee approach, utilizing advanced fuzzy matching techniques.
- Improved user feedback in app.py to provide clearer insights into the duplicate detection process and results.
- Added new dependencies for enhanced string matching capabilities.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ openpyxl = "^3.1.0"
 unidecode = "^1.3.6"
 scikit-learn = "^1.3.0"
 nltk = "^3.8.1"
+thefuzz = "^0.22.1"
+networkx = "^3.0"
 
 [build-system]
 requires = ["poetry-core"]
